@@ -1,21 +1,33 @@
 :- module(t20aatwn, []).
-:- use_module(triple20(rdf_rules)).
-:- use_module(triple20(rdf_util)).
-:- use_module(library('semweb/rdfs')).
-:- use_module(library('semweb/rdf_db')).
+:- include(triple20(plugin)).
+:- plugin([ rdfs:label   = 'AAT-WordNet',
+	    rdfs:comment = 'Relate AAT and WordNet'
+	  ]).
 
-:- begin_rules(rdf_node, aatwn).
+:- use_module(t20plugin(wordnet)).
+:- use_module(t20plugin(skos)).
+
+:- begin_rules(rdf_node, t20aatwn_rules).
 
 %	drop_resource_command(+Onto, +Drop, -Command)
 %	
 %	Determine the command(s) to execute if an object representing Drop
 %	is dropped onto an object representing Ondo.  
 
-drop_resource_command(C, R, skos_narrower) :-
-	rdfs_individual_of(C, rdf:'Property'),
-	rdfs_individual_of(R, rdf:'Property').
+					% drop AAT on WordNet
+drop_resource_command(C, R, Command) :-
+	rdfs_individual_of(C, wn2:'Synset'),
+	rdfs_individual_of(R, aat:'Subject').
 drop_resource_command(C, R, Command) :-
 	super::drop_resource_command(C, R, Command).
+
+relation(rdfs:subClassOf).
+relation(rdf:type).
+relation(owl:sameAs).
+relation(skos:broader).
+relation(skos:broaderInstantive).
+relation(skos:broaderPartitive).
+relation(skos:broaderGeneric).
 
 %	drop_resource(+Command, +Ondo, +Drop)
 %	
